--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,25 +6,30 @@
     android:layout_height="match_parent"
     tools:context="au.com.beba.phaserizer.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
-        android:id="@+id/btn_test"
+        android:id="@+id/btn_test_success"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Test Phases"/>
+        android:text="Test Success Phases" />
+
+    <Button
+        android:id="@+id/btn_test_error_phase1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Test Error Phase 1"
+        app:layout_constraintTop_toBottomOf="@id/btn_test_success" />
+
+    <Button
+        android:id="@+id/btn_test_error_phase2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Test Error Phase 2"
+        app:layout_constraintTop_toBottomOf="@id/btn_test_error_phase1" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Test Non-blocking UI"
-        app:layout_constraintTop_toBottomOf="@id/btn_test"/>
+        app:layout_constraintTop_toBottomOf="@id/btn_test_error_phase2" />
 
 </android.support.constraint.ConstraintLayout>
