--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,14 @@
         android:id="@+id/btn_test_success"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Test Success Phases" />
+        android:text="Test Serial Chain" />
 
     <Button
         android:id="@+id/btn_test_error_phase1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Test Error Phase 1"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/btn_test_success" />
 
     <Button
@@ -24,12 +25,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Test Error Phase 2"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/btn_test_error_phase1" />
 
     <Button
+        android:id="@+id/btn_test_error_phase3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Test Non-blocking UI"
+        android:text="Click while chain is running (UI non-blocking test)"
+        android:visibility="visible"
         app:layout_constraintTop_toBottomOf="@id/btn_test_error_phase2" />
 
 </android.support.constraint.ConstraintLayout>
