--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="chainBackground">#7777ee</color>
+    <color name="chainText">#fff</color>
+
+    <color name="status_not_started">#999</color>
+    <color name="status_in_progress">#b1af59</color>
+    <color name="status_success">#7cb159</color>
+    <color name="status_error">#b15963</color>
+
 </resources>
