--- a/app/src/main/res/layout/activity_visualise_chain.xml
+++ b/app/src/main/res/layout/activity_visualise_chain.xml
@@ -47,4 +47,36 @@
         <!-- DYNAMICALLY POPULATED -->
     </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/inspect_holder"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_margin="8dp"
+        android:gravity="end"
+        android:orientation="vertical"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_start_test"
+        android:visibility="gone"
+        tools:visibility="visible"
+        >
+
+        <TextView
+            android:id="@+id/inspect_chain_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="ChainName" />
+
+        <TextView
+            android:id="@+id/inspect_chain_main_task_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="NONE" />
+
+        <TextView
+            android:id="@+id/inspect_chain_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="NOT_STARTED" />
+
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
