--- a/app/src/main/res/layout/chain_view.xml
+++ b/app/src/main/res/layout/chain_view.xml
@@ -1,25 +1,94 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:padding="@dimen/chain_view_padding">
-    <TextView
-        android:id="@+id/chain_name"
+    android:padding="0dp"
+    >
+
+    <android.support.constraint.Guideline
+        android:id="@+id/start_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/duration_size"
-        android:textColor="@color/chainText"
-        tools:text="AChain"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="16dp"
         />
-    <TextView
-        android:id="@+id/execution_duration"
+
+    <android.support.constraint.Guideline
+        android:id="@+id/end_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/chain_name"
-        android:textSize="@dimen/duration_size"
-        android:textColor="@color/chainText"
-        tools:text="500"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="16dp"
         />
+
+    <View
+        android:id="@+id/chain_progress"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/chainBackground"
+        app:layout_constraintTop_toTopOf="@+id/inner_content"
+        app:layout_constraintBottom_toBottomOf="@+id/inner_content"
+        app:layout_constraintLeft_toLeftOf="@id/start_content"
+        app:layout_constraintRight_toLeftOf="@id/start_content"
+        />
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/inner_content"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/start_content"
+        app:layout_constraintRight_toLeftOf="@id/end_content"
+        android:background="@drawable/square_frame"
+        >
+
+        <TextView
+            android:id="@+id/chain_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/chain_name"
+            android:textColor="@color/chainText"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:paddingTop="@dimen/chain_view_padding"
+            android:paddingLeft="@dimen/chain_view_padding"
+            tools:text="AChain"
+            />
+        <TextView
+            android:id="@+id/execution_duration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/chain_name"
+            app:layout_constraintRight_toRightOf="parent"
+            android:textSize="@dimen/duration_size"
+            android:textColor="@color/chainText"
+            android:paddingBottom="@dimen/chain_view_padding"
+            android:paddingRight="@dimen/chain_view_padding"
+            tools:text="500"
+            />
+    </android.support.constraint.ConstraintLayout>
+
+    <include layout="@layout/chain_view_left_end"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="@id/start_content"
+        android:visibility="visible"
+        />
+
+    <include layout="@layout/chain_view_right_end"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/end_content"
+        app:layout_constraintRight_toRightOf="parent"
+        android:visibility="visible"
+        />
+
 </android.support.constraint.ConstraintLayout>
