--- a/app/src/main/res/layout/activity_visualise_chain.xml
+++ b/app/src/main/res/layout/activity_visualise_chain.xml
@@ -12,8 +12,21 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/btn_start_test"
+        app:layout_constraintRight_toLeftOf="@+id/btn_clear"
+        app:layout_constraintVertical_chainStyle="packed"
         android:text="@string/btn_show" />
+
+    <Button
+        android:id="@+id/btn_clear"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/btn_start_test"
+        app:layout_constraintLeft_toRightOf="@id/btn_show_test"
+        android:text="@string/btn_clear"
+        app:layout_constraintVertical_chainStyle="packed"
+        android:visibility="visible"
+        />
 
     <Button
         android:id="@+id/btn_start_test"
@@ -21,8 +34,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/btn_show_test"
+        app:layout_constraintLeft_toRightOf="@id/btn_clear"
         android:text="@string/btn_start"
+        app:layout_constraintVertical_chainStyle="packed"
         android:visibility="visible"
         />
 
@@ -36,14 +50,6 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_margin="8dp"
         >
-        <View
-            android:id="@+id/anchor_view"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@color/colorPrimaryDark"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:visibility="gone"/>
         <!-- DYNAMICALLY POPULATED -->
     </RelativeLayout>
 
