--- a/app/src/main/res/layout/chain_view.xml
+++ b/app/src/main/res/layout/chain_view.xml
@@ -1,11 +1,10 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraint_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:padding="0dp"
+    android:layout_height="@dimen/chain_height"
     >
 
     <android.support.constraint.Guideline
@@ -13,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="16dp"
+        app:layout_constraintGuide_begin="0dp"
         />
 
     <android.support.constraint.Guideline
@@ -21,13 +20,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="16dp"
+        app:layout_constraintGuide_end="0dp"
         />
 
     <View
         android:id="@+id/chain_progress"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:background="@color/chainBackground"
         app:layout_constraintTop_toTopOf="@+id/inner_content"
         app:layout_constraintBottom_toBottomOf="@+id/inner_content"
@@ -38,12 +37,13 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/inner_content"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/chain_height"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/start_content"
         app:layout_constraintRight_toLeftOf="@id/end_content"
         android:background="@drawable/square_frame"
+        android:padding="8dp"
         >
 
         <TextView
@@ -52,7 +52,10 @@
             android:layout_height="wrap_content"
             android:textSize="@dimen/chain_name"
             android:textColor="@color/chainText"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             android:paddingTop="@dimen/chain_view_padding"
             android:paddingLeft="@dimen/chain_view_padding"
             tools:text="AChain"
@@ -61,34 +64,16 @@
             android:id="@+id/execution_duration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/chain_name"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:textSize="@dimen/duration_size"
             android:textColor="@color/chainText"
             android:paddingBottom="@dimen/chain_view_padding"
             android:paddingRight="@dimen/chain_view_padding"
             tools:text="500"
+            android:visibility="gone"
+            tools:visibility="visible"
             />
     </android.support.constraint.ConstraintLayout>
-
-    <include layout="@layout/chain_view_left_end"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="@id/start_content"
-        android:visibility="visible"
-        />
-
-    <include layout="@layout/chain_view_right_end"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@id/end_content"
-        app:layout_constraintRight_toRightOf="parent"
-        android:visibility="visible"
-        />
 
 </android.support.constraint.ConstraintLayout>
