--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="chain_name">14sp</dimen>
+    <dimen name="chain_name">22sp</dimen>
     <dimen name="duration_size">11sp</dimen>
     <dimen name="chain_view_padding">8dp</dimen>
-    <dimen name="dips_per_second">80dp</dimen>
+    <dimen name="connection_thickness">2dp</dimen>
+    <dimen name="connector_height">8dp</dimen>
+    <dimen name="connector_width">30dp</dimen>
+    <!--<dimen name="connector_width">4dp</dimen>-->
+
+    <dimen name="dips_per_second">100dp</dimen>
+    <dimen name="chain_height">60dp</dimen>
 </resources>
