--- a/app/src/main/res/drawable/square_frame.xml
+++ b/app/src/main/res/drawable/square_frame.xml
@@ -4,5 +4,5 @@
     <solid android:color="@android:color/transparent" />
     <stroke
         android:width="1dp"
-        android:color="@color/status_border" />
+        android:color="@color/status_border_plan" />
 </shape>
