--- a/app/src/main/res/layout/chain_view.xml
+++ b/app/src/main/res/layout/chain_view.xml
@@ -23,57 +23,66 @@
         app:layout_constraintGuide_end="0dp"
         />
 
-    <View
-        android:id="@+id/chain_progress"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:background="@color/chainBackground"
-        app:layout_constraintTop_toTopOf="@+id/inner_content"
-        app:layout_constraintBottom_toBottomOf="@+id/inner_content"
-        app:layout_constraintLeft_toLeftOf="@id/start_content"
-        app:layout_constraintRight_toLeftOf="@id/start_content"
-        />
-
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/inner_content"
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="0dp"
         android:layout_height="@dimen/chain_height"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/start_content"
-        app:layout_constraintRight_toLeftOf="@id/end_content"
-        android:background="@drawable/square_frame"
-        android:padding="8dp"
+        app:layout_constraintRight_toRightOf="@id/end_content"
+        android:elevation="4dp"
+        app:cardBackgroundColor="@color/status_border_plan"
+        app:cardCornerRadius="6dp"
+        app:cardUseCompatPadding="false"
         >
 
-        <TextView
-            android:id="@+id/chain_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/chain_name"
-            android:textColor="@color/chainText"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:paddingTop="@dimen/chain_view_padding"
-            android:paddingLeft="@dimen/chain_view_padding"
-            tools:text="AChain"
-            />
-        <TextView
-            android:id="@+id/execution_duration"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:textSize="@dimen/duration_size"
-            android:textColor="@color/chainText"
-            android:paddingBottom="@dimen/chain_view_padding"
-            android:paddingRight="@dimen/chain_view_padding"
-            tools:text="500"
-            android:visibility="gone"
-            tools:visibility="visible"
-            />
-    </android.support.constraint.ConstraintLayout>
+        <!--android:background="@drawable/square_frame"-->
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/inner_content"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/chain_height"
+            android:padding="0dp"
+            >
+
+            <View
+                android:id="@+id/chain_progress"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@color/status_not_started"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="parent"
+                />
+
+            <TextView
+                android:id="@+id/chain_name"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:gravity="center"
+                android:textSize="@dimen/chain_name"
+                android:textColor="@color/chainText"
+                tools:text="AChain"
+                />
+            <TextView
+                android:id="@+id/execution_duration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:textSize="@dimen/duration_size"
+                android:textColor="@color/chainText"
+                android:padding="@dimen/chain_view_padding"
+                tools:text="500"
+                android:visibility="gone"
+                tools:visibility="visible"
+                />
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
