--- a/app/src/main/res/layout/connector_first_parallel.xml
+++ b/app/src/main/res/layout/connector_first_parallel.xml
@@ -14,7 +14,7 @@
         android:background="@color/status_border"
         app:layout_constraintTop_toTopOf="@id/middle_horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="@id/middle_vertical"
+        app:layout_constraintRight_toRightOf="parent"
         />
 
     <View
@@ -24,6 +24,19 @@
         app:layout_constraintTop_toTopOf="@id/middle_horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/middle_vertical"
+        />
+
+    <ImageView
+        android:layout_width="12dp"
+        android:layout_height="12dp"
+        android:padding="2dp"
+        android:src="@drawable/circle"
+        app:layout_constraintTop_toTopOf="@id/middle_horizontal"
+        app:layout_constraintBottom_toBottomOf="@id/middle_horizontal"
+        app:layout_constraintLeft_toLeftOf="@id/middle_vertical"
+        app:layout_constraintRight_toRightOf="@id/middle_vertical"
+        android:contentDescription="@null"
+        android:background="@android:color/white"
         />
 
 </android.support.constraint.ConstraintLayout>
