--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,13 @@
             android:text="Multi-parallel chain"
             />
 
+        <Button
+            android:id="@+id/btn_request_letter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Request Letter"
+            />
+
     </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
