--- a/app/src/main/res/layout/activity_visualise_chain.xml
+++ b/app/src/main/res/layout/activity_visualise_chain.xml
@@ -67,6 +67,19 @@
 
     </ScrollView>
 
+    <!-- APP UI CONTAINER -->
+    <FrameLayout
+        android:id="@+id/app_ui_container"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
+        android:layout_margin="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
+        tools:visibility="visible"
+        />
+
+    <!-- INSPECT PANEL -->
     <LinearLayout
         android:id="@+id/inspect_holder"
         android:layout_width="wrap_content"
