--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,10 +32,10 @@
             />
 
         <Button
-            android:id="@+id/btn_request_letter"
+            android:id="@+id/btn_request_values"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Request Letter"
+            android:text="Request Values"
             />
 
     </LinearLayout>
