--- a/app/src/main/res/layout/activity_visualise_chain.xml
+++ b/app/src/main/res/layout/activity_visualise_chain.xml
@@ -77,6 +77,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:visibility="gone"
         tools:visibility="visible"
+        android:background="@android:color/holo_blue_light"
         />
 
     <!-- INSPECT PANEL -->
